<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.OptionsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectinterest"
            android:layout_width="291dp"
            android:layout_height="71dp"
            android:background="@color/white"
            android:ems="10"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/select_interest1"
            android:textAlignment="center"
            android:textColor="#1a5276"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Java"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/java"

            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/c_programming"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/python"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/html_css_javascript"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/big_data"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/cloud_computing"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/artificial_intelligence"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/soft_core"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest9"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/machine_learning"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/data_science"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

    </LinearLayout>
</ScrollView>

